# PairTorch

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
scripts/: torchscript_lightning_example.py  zero_model.py
src/: CMakeLists.txt  pair_torch.cpp  pair_torch.h  torchplugin.cpp
tests/: CMakeLists.txt  in.load_model  in.load_plugin  in.run_model  lj_model.pt  scratch.cpp  zero_model.pt
